--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="/src/main.tsx"></script>
     <script
       type="text/javascript"
-      src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=6lz4fy8x7t&submodules=geocoder"
+      src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=%VITE_NAVER_MAP_API_KEY%t&submodules=geocoder"
     ></script>
   </body>
 </html>
