fix: env 값 사용 방식 변경 #15
- Naver Map API 사용을 위한 env 값 활용 방식을 일부 변경

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script
-      type="text/javascript"
-      src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=%VITE_NAVER_MAP_API_KEY%t&submodules=geocoder"
-    ></script>
+    <script type="module">
+      const naverMapApiKey = import.meta.env.VITE_NAVER_MAP_API_KEY;
+
+      const script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src = `https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=${naverMapApiKey}&submodules=geocoder`;
+      document.body.appendChild(script);
+    </script>
   </body>
 </html>
