--- a/index.html
+++ b/index.html
@@ -2,9 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="180x180"
+      href="/apple-touch-icon.png"
+      type="image/png"
+    />
+
+    <meta name="title" content="Nailo 네일로" />
+    <meta name="description" content="오늘 고른 네일, 예약은 바로 내일로." />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="Korean" />
+    <meta name="theme-color" content="#1a1b1f" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#1a1b1f" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <meta property="og:title" content="Nailo 네일로" />
+    <meta
+      property="og:description"
+      content="오늘 고른 네일, 예약은 바로 내일로."
+    />
+    <meta property="og:image" content="/ogimage.png" />
+    <meta property="og:url" content="https://nailo-dev.netlify.app" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nailo 네일로" />
+    <meta
+      name="twitter:description"
+      content="오늘 고른 네일, 예약은 바로 내일로."
+    />
+    <meta name="twitter:image" content="/ogimage.png" />
+    <meta name="twitter:url" content="https://nailo-dev.netlify.app" />
+    <title>Nailo 네일로</title>
   </head>
   <body>
     <div id="root"></div>
