--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link
-      rel="apple-touch-icon-precomposed"
+      rel="apple-touch-icon"
+      href="/apple-touch-icon-180x180.png"
       sizes="180x180"
-      href="/apple-touch-icon.png"
-      type="image/png"
     />
+    <link rel="mask-icon" href="/mask-icon.svg" color="#1a1b1f" />
+    <meta name="theme-color" content="#1a1b1f" />
 
     <meta name="title" content="Nailo 네일로" />
     <meta name="description" content="오늘 고른 네일, 예약은 바로 내일로." />
@@ -31,7 +30,7 @@
       content="오늘 고른 네일, 예약은 바로 내일로."
     />
     <meta property="og:image" content="/ogimage.png" />
-    <meta property="og:url" content="https://nailo-dev.netlify.app" />
+    <meta property="og:url" content="https://nailo.netlify.app" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -41,7 +40,7 @@
       content="오늘 고른 네일, 예약은 바로 내일로."
     />
     <meta name="twitter:image" content="/ogimage.png" />
-    <meta name="twitter:url" content="https://nailo-dev.netlify.app" />
+    <meta name="twitter:url" content="https://nailo.netlify.app" />
     <title>Nailo 네일로</title>
   </head>
   <body>
